server/deploy/kubernetes/11-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hauzral-worker
  namespace: hauzral
  labels:
    app: hauzral-worker
spec:
  ports:
    - port: 5555
      name: flower
      targetPort: 5555
      protocol: TCP
  selector:
    app: hauzral-worker
  type: ClusterIP
